data/derived/comb/progs/unify/prog4844.ml.out
Characters 20-45:
  let _ = List.combine(padZero [9;9] [1;0;0;2]);;
                      ^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type int list * int list
       but an expression was expected of type 'a list
